--- a/racer/racer.css
+++ b/racer/racer.css
@@ -7,7 +7,7 @@
 
 body, html {
     margin: 0;
-    padding: 0;
+    padding: 0 3dvw;
     height: 100vh;
     background: radial-gradient(circle at bottom, rgb(17, 22, 27), rgb(0, 0, 0));
     color: white;
@@ -56,7 +56,6 @@ body, html {
     display: flex;
     flex-direction: row;
     width: 100%;
-    max-width: 1400px;
     gap: 1.5rem;
     flex: 1;
     padding: 1.5rem;
@@ -252,10 +251,10 @@ body, html {
 }
 
 .table-scroll-container {
-    flex: 1;
     overflow: auto;
     width: 100%;
     border-radius: 1rem;
+    overflow: visible;
 }
 
 .results-table th, .results-table td {
